fix!: invalid git email conf...

--- a/emacs.d/snippets/makefile-mode/Makefile
+++ b/emacs.d/snippets/makefile-mode/Makefile
@@ -14,11 +14,12 @@ include .env
 endif
 
 help:
-	@grep -E '^[0-9a-zA-Z_-]+:.*?## .*$$' $\{COMMAND_LIST\} | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $\$1, $\$2}'
+	@grep -E '^[a-zA-Z].*:\s##\s.*$$' $\{COMMAND_LIST\} |sed 's/\\\//g' |awk 'BEGIN {FS = ": ## "}; {printf "\033[36m%-30s\033[0m %s\n", $\$1, $\$2}'
 
 get_git_tag:
 	$(eval git_ver = $(shell git describe --tags --dirty --abbrev=0))
 	$(eval git_ver_verbose = $(shell git describe --tags --dirty))
 
+.PHONY: $1
 $1: ## comment
 	@false
