--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -12,6 +12,7 @@ Esc-q                           # コマンドラインスタック
 **/*.(cpp|d)                    # *.cpp or *.d
 zmv -n '(*)-(*)' '${1}-$(printf "%02d" ${2})'
 find . -name \*hoge\* -executable -type f # 実行ファイルのみ検索
+find . -name '*.rb' -type f -not -path '*node_modules*' -not -path '*vendor*' # exclude dir
 ulimit -c unlimited             # コアダンプ時にcoreを吐かせる(容量は無制限)
 sudo screen /dev/device 115200  # screen コマンドでシリアル通信 // 切断は C-a k
 
@@ -33,3 +34,11 @@ perl -pe 's/\r\n|\n|\r/\r\n/g' inputfile > outputfile  # Convert to DOS
 perl -pe 's/\r\n|\n|\r/\n/g'   inputfile > outputfile  # Convert to UNIX
 perl -pe 's/\r\n|\n|\r/\r/g'   inputfile > outputfile  # Convert to old Mac
 tar -c somefolder | pv | lz4 -B4 | ssh example.com "lz4 -d | tar x"
+nc -zv $DOMAIN 443 # port check for macos domain or ip addr
+dig $DOMAIN # dns
+sudo arp-scan -l # scan ip address
+ssh <remote name> -NL 5433:localhost:5432 # 5433=local, 5432=remote, localhost=local in remote
+nkf --guess foo.dxf # check encoding
+nkf -w sjis.dxff > utf-8.dxf
+cat production.log |jq 'select(.named_tags.request_id == "378e421d-7150-49ad-acdb-1b47d0f28ca2")'
+curl -X POST -F file=@/path/to/file $URL
