--- a/alacritty.yml
+++ b/alacritty.yml
@@ -13,63 +13,52 @@ env:
   # `infocmp xterm-256color`.
   TERM: xterm-256color
 
-# Window dimensions in character columns and lines
-# (changes require restart)
-dimensions:
-  columns: 160
-  lines: 40
-
 # Adds this many blank pixels of padding around the window
 # Units are physical pixels; this is not DPI aware.
 # (change requires restart)
-padding:
-  x: 2
-  y: 2
+#padding:
+#  x: 2
+#  y: 2
 
 # The FreeType rasterizer needs to know the device DPI for best results
 # (changes require restart)
-dpi:
-  x: 96.0
-  y: 96.0
+#dpi:
+#  x: 96.0
+#  y: 96.0
 
 # Display tabs using this many cells (changes require restart)
-tabspaces: 8
+#tabspaces: 8
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
 
 font:
   normal:
-    family: Source Code Pro
-    style: Medium
+    family: Source Han Code JP
+    style: M
 
   bold:
-    family: Source Code Pro
-    style: Bold
+    family: Source Han Code JP
+    style: B
 
   italic:
-    family: Source Code Pro
-    style: Italic
+    family: Source Han Code JP
+    style: M It
 
-  size: 12.0
+  size: 14
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increase the x offset to move the glyph to
   # the right, increase the y offset to move the glyph upward.
   glyph_offset:
-    x: 0.0
-    y: 0.0
-
-  # OS X only: use thin stroke font rendering. Thin strokes are suitable
-  # for retina displays, but for non-retina you probably want this set to
-  # false.
-  use_thin_strokes: true
+    x: 0
+    y: 0
 
 # Should display the render timer
 render_timer: false
@@ -83,35 +72,66 @@ hide_cursor_when_typing: false
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
-background_opacity: 0.8
+window:
+  option_as_alt: Both
 
-# Colors (hybrid: https://gist.github.com/w0ng/3278077)
+  # Window dimensions in character columns and lines
+  # (changes require restart)
+  dimensions:
+    columns: 200
+    lines: 60
+
+  opacity: 0.9
+
+# https://raw.githubusercontent.com/nordtheme/alacritty/main/src/nord.yaml
 colors:
   primary:
-    background: '0x1D1F21'
-    foreground: '0xC5C8C6'
-  # Colors the cursor will use if `custom_cursor_colors` is true
+    background: "#1D1F21"
+    foreground: "#d8dee9"
+    dim_foreground: "#a5abb6"
   cursor:
-    text: '0xC5C8C6'
-    cursor: '0x8E8E8E'
+    text: "#2e3440"
+    cursor: "#d8dee9"
+  vi_mode_cursor:
+    text: "#2e3440"
+    cursor: "#d8dee9"
+  selection:
+    text: CellForeground
+    background: "#4c566a"
+  search:
+    matches:
+      foreground: CellBackground
+      background: "#1D1F21"
+  footer_bar:
+    background: "#1D1F21"
+    foreground: "#d8dee9"
   normal:
-    black:   '0x282A2E'
-    red:     '0xA54242'
-    green:   '0x8C9440'
-    yellow:  '0xDE935F'
-    blue:    '0x5F819D'
-    magenta: '0x85678F'
-    cyan:    '0x5E8D87'
-    white:   '0x707880'
+    black: "#3b4252"
+    red: "#bf616a"
+    green: "#a3be8c"
+    yellow: "#ebcb8b"
+    blue: "#81a1c1"
+    magenta: "#b48ead"
+    cyan: "#88c0d0"
+    white: "#e5e9f0"
   bright:
-    black:   '0x373B41'
-    red:     '0xCC6666'
-    green:   '0xB5BD68'
-    yellow:  '0xF0C674'
-    blue:    '0x81A2BE'
-    magenta: '0xB294BB'
-    cyan:    '0x8ABEB7'
-    white:   '0xC5C8C6'
+    black: "#4c566a"
+    red: "#bf616a"
+    green: "#a3be8c"
+    yellow: "#ebcb8b"
+    blue: "#81a1c1"
+    magenta: "#b48ead"
+    cyan: "#8fbcbb"
+    white: "#eceff4"
+  dim:
+    black: "#373e4d"
+    red: "#94545d"
+    green: "#809575"
+    yellow: "#b29e75"
+    blue: "#68809a"
+    magenta: "#8c738c"
+    cyan: "#6d96a5"
+    white: "#aeb3bb"
 
 # [Resources]
 # Nord
@@ -164,7 +184,7 @@ colors:
 #
 # To completely disable the visual bell, set its duration to 0.
 #
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
 
@@ -185,6 +205,12 @@ mouse:
 #  program: /bin/bash
 #  args:
 #    - --login
+shell:
+  program: /bin/zsh
+  args:
+    - -l
+    - -c
+    - "/usr/local/bin/tmux a -t 0 || /usr/local/bin/tmux -u"
 
 # Key bindings
 #
@@ -318,71 +344,3 @@ key_bindings:
   - { key: F10,      mods: Command, chars: "\x1b[21;3~"                  }
   - { key: F11,      mods: Command, chars: "\x1b[23;3~"                  }
   - { key: F12,      mods: Command, chars: "\x1b[24;3~"                  }
-  - { key: A,        mods: Alt,       chars: "\x1ba"                     }
-  - { key: B,        mods: Alt,       chars: "\x1bb"                     }
-  - { key: C,        mods: Alt,       chars: "\x1bc"                     }
-  - { key: D,        mods: Alt,       chars: "\x1bd"                     }
-  - { key: E,        mods: Alt,       chars: "\x1be"                     }
-  - { key: F,        mods: Alt,       chars: "\x1bf"                     }
-  - { key: G,        mods: Alt,       chars: "\x1bg"                     }
-  - { key: H,        mods: Alt,       chars: "\x1bh"                     }
-  - { key: I,        mods: Alt,       chars: "\x1bi"                     }
-  - { key: J,        mods: Alt,       chars: "\x1bj"                     }
-  - { key: K,        mods: Alt,       chars: "\x1bk"                     }
-  - { key: L,        mods: Alt,       chars: "\x1bl"                     }
-  - { key: M,        mods: Alt,       chars: "\x1bm"                     }
-  - { key: N,        mods: Alt,       chars: "\x1bn"                     }
-  - { key: O,        mods: Alt,       chars: "\x1bo"                     }
-  - { key: P,        mods: Alt,       chars: "\x1bp"                     }
-  - { key: Q,        mods: Alt,       chars: "\x1bq"                     }
-  - { key: R,        mods: Alt,       chars: "\x1br"                     }
-  - { key: S,        mods: Alt,       chars: "\x1bs"                     }
-  - { key: T,        mods: Alt,       chars: "\x1bt"                     }
-  - { key: U,        mods: Alt,       chars: "\x1bu"                     }
-  - { key: V,        mods: Alt,       chars: "\x1bv"                     }
-  - { key: W,        mods: Alt,       chars: "\x1bw"                     }
-  - { key: X,        mods: Alt,       chars: "\x1bx"                     }
-  - { key: Y,        mods: Alt,       chars: "\x1by"                     }
-  - { key: Z,        mods: Alt,       chars: "\x1bz"                     }
-  - { key: A,        mods: Alt|Shift, chars: "\x1bA"                     }
-  - { key: B,        mods: Alt|Shift, chars: "\x1bB"                     }
-  - { key: C,        mods: Alt|Shift, chars: "\x1bC"                     }
-  - { key: D,        mods: Alt|Shift, chars: "\x1bD"                     }
-  - { key: E,        mods: Alt|Shift, chars: "\x1bE"                     }
-  - { key: F,        mods: Alt|Shift, chars: "\x1bF"                     }
-  - { key: G,        mods: Alt|Shift, chars: "\x1bG"                     }
-  - { key: H,        mods: Alt|Shift, chars: "\x1bH"                     }
-  - { key: I,        mods: Alt|Shift, chars: "\x1bI"                     }
-  - { key: J,        mods: Alt|Shift, chars: "\x1bJ"                     }
-  - { key: K,        mods: Alt|Shift, chars: "\x1bK"                     }
-  - { key: L,        mods: Alt|Shift, chars: "\x1bL"                     }
-  - { key: M,        mods: Alt|Shift, chars: "\x1bM"                     }
-  - { key: N,        mods: Alt|Shift, chars: "\x1bN"                     }
-  - { key: O,        mods: Alt|Shift, chars: "\x1bO"                     }
-  - { key: P,        mods: Alt|Shift, chars: "\x1bP"                     }
-  - { key: Q,        mods: Alt|Shift, chars: "\x1bQ"                     }
-  - { key: R,        mods: Alt|Shift, chars: "\x1bR"                     }
-  - { key: S,        mods: Alt|Shift, chars: "\x1bS"                     }
-  - { key: T,        mods: Alt|Shift, chars: "\x1bT"                     }
-  - { key: U,        mods: Alt|Shift, chars: "\x1bU"                     }
-  - { key: V,        mods: Alt|Shift, chars: "\x1bV"                     }
-  - { key: W,        mods: Alt|Shift, chars: "\x1bW"                     }
-  - { key: X,        mods: Alt|Shift, chars: "\x1bX"                     }
-  - { key: Y,        mods: Alt|Shift, chars: "\x1bY"                     }
-  - { key: Z,        mods: Alt|Shift, chars: "\x1bZ"                     }
-  - { key: Key1,     mods: Alt,       chars: "\x1b1"                     }
-  - { key: Key2,     mods: Alt,       chars: "\x1b2"                     }
-  - { key: Key3,     mods: Alt,       chars: "\x1b3"                     }
-  - { key: Key4,     mods: Alt,       chars: "\x1b4"                     }
-  - { key: Key5,     mods: Alt,       chars: "\x1b5"                     }
-  - { key: Key6,     mods: Alt,       chars: "\x1b6"                     }
-  - { key: Key7,     mods: Alt,       chars: "\x1b7"                     }
-  - { key: Key8,     mods: Alt,       chars: "\x1b8"                     }
-  - { key: Key9,     mods: Alt,       chars: "\x1b9"                     }
-  - { key: Key0,     mods: Alt,       chars: "\x1b0"                     }
-  - { key: Grave,    mods: Alt,       chars: "\x1b`"                     } # Alt + `
-  - { key: Grave,    mods: Alt|Shift, chars: "\x1b~"                     } # Alt + ~
-  - { key: Period,   mods: Alt,       chars: "\x1b."                     } # Alt + .
-  - { key: Key8,     mods: Alt|Shift, chars: "\x1b*"                     } # Alt + *
-  - { key: Key3,     mods: Alt|Shift, chars: "\x1b#"                     } # Alt + #
-  - { key: Space,    mods: Control,   chars: "\x00"                      }
