--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -42,3 +42,5 @@ nkf --guess foo.dxf # check encoding
 nkf -w sjis.dxff > utf-8.dxf
 cat production.log |jq 'select(.named_tags.request_id == "378e421d-7150-49ad-acdb-1b47d0f28ca2")'
 curl -X POST -F file=@/path/to/file $URL
+
+fswatch -0 ~/Downloads | xargs -0 -n1 -I{} sh -c 'if [[ "{}" == *.csv ]]; then cat "{}" && echo "==="; fi' # [mac] monitor new file -> cat file
