--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -20,8 +20,9 @@ wget $URL -O - |tar xzf -
 du -d depth # depth値の深さまで表示する
 find . -name '*.cpp' | xargs wc -l # 行数カウンタ
 find . -name '*.cpp' -type f | xargs grep -Ev '^[[:space:]]*((/?\*.*/?)|(//.*))$' | wc -l # 行数カウンタ(空行無視)
-tar Jxf <*.tar.xz> # xzファイルの解凍
 /usr/lib/mozc/mozc_tool -mode=config_dialog # mozc gui config
+tar xf foo.tar.gz # unzip. auto detection for gzip, zstd
+tar caf foo foo.tar.zstd # zip. auto detection for gzip, zstd
 tar cf - . |lz4 - hoge.tar.lz4 # need `cd path/to/dir`
 lz4 -d hoge.tar.lz4 | tar xf - -C hoge
 rsync -ru --ignore-existing $SRC $DEST
