--- a/zsh/cheatsheets/cheat-sheet.conf
+++ b/zsh/cheatsheets/cheat-sheet.conf
@@ -45,3 +45,5 @@ cat production.log |jq 'select(.named_tags.request_id == "378e421d-7150-49ad-acd
 curl -X POST -F file=@/path/to/file $URL
 
 fswatch -0 ~/Downloads | xargs -0 -n1 -I{} sh -c 'if [[ "{}" == *.csv ]]; then cat "{}" && echo "==="; fi' # [mac] monitor new file -> cat file
+# network
+dns-sd -G v4v6 foo.local # 正引き
