chore(yazi): specify edit

--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -8,6 +8,11 @@ play = [
   { run = 'vlc "$@"', orphan = true, desc = "VLC", for = "unix" },
   { run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
 ]
+edit = [
+  { run = 'vi "$@"', block = true, for = "unix" },
+  { run = "%EDITOR% %*",  block = true, for = "windows" },
+  { run = 'code "$@"', block = false, desc = "VSCode", for = "unix" },
+]
 
 [open]
 prepend_rules = [
