--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -62,17 +62,13 @@ automatically-unhide-macos-hidden-apps = true
     1 = 'main'
     2 = 'main'
     3 = 'main'
-    4 = 'secondary'
-    5 = 'secondary'
+    4 = 'main'
+    5 = 'main'
     6 = 'secondary'
     7 = 'secondary'
     8 = 'secondary'
     9 = 'secondary'
     10 = 'secondary'
-
-    #4 = 'built-in'
-    #5 = '^built-in retina display$'
-    #6 = ['secondary', 'dell']
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -107,10 +103,6 @@ automatically-unhide-macos-hidden-apps = true
     # end tell'
     # '''
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-    alt-slash = 'layout tiles horizontal vertical'
-    alt-comma = 'layout accordion horizontal vertical'
-
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
     # See: https://nikitabobko.github.io/AeroSpace/commands#move
     alt-h = 'focus --boundaries all-monitors-outer-frame left'
@@ -122,6 +114,11 @@ automatically-unhide-macos-hidden-apps = true
     alt-shift-j = 'move down'
     alt-shift-k = 'move up'
     alt-shift-l = 'move right'
+
+    alt-ctrl-h = 'move left'
+    alt-ctrl-j = 'move down'
+    alt-ctrl-k = 'move up'
+    alt-ctrl-l = 'move right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
     alt-1 = 'workspace 1'
@@ -164,13 +161,17 @@ automatically-unhide-macos-hidden-apps = true
     f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
     backspace = ['close-all-windows-but-current', 'mode main']
 
+    # See: https://nikitabobko.github.io/AeroSpace/commands#layout
+    slash = 'layout tiles horizontal vertical'
+    comma = 'layout accordion horizontal vertical'
+
     # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
     #s = ['layout sticky tiling', 'mode main']
 
-    alt-shift-h = ['join-with left', 'mode main']
-    alt-shift-j = ['join-with down', 'mode main']
-    alt-shift-k = ['join-with up', 'mode main']
-    alt-shift-l = ['join-with right', 'mode main']
+    h = ['join-with left', 'mode main']
+    j = ['join-with down', 'mode main']
+    k = ['join-with up', 'mode main']
+    l = ['join-with right', 'mode main']
 
     down = 'volume down'
     up = 'volume up'
@@ -178,8 +179,8 @@ automatically-unhide-macos-hidden-apps = true
 
 [mode.resize.binding]
     h = 'resize width -50'
-    j = 'resize height +50'
-    k = 'resize height -50'
+    j = 'resize height -50'
+    k = 'resize height +50'
     l = 'resize width +50'
     r = ['balance-sizes', 'mode main']
     enter = 'mode main'
@@ -193,3 +194,12 @@ automatically-unhide-macos-hidden-apps = true
     if.app-id = 'com.google.Chrome.app.faolnafnngnfdaknnbpnkhgohbobgegn'
     run = "move-node-to-workspace 2"
 
+[[on-window-detected]]
+    if.app-name-regex-substring = 'Google Chrome'
+    if.window-title-regex-substring = 'Bitwarden - *'
+    run = ['layout floating']
+
+[[on-window-detected]]
+    if.app-name-regex-substring = 'Google Chrome'
+    if.window-title-regex-substring = 'Bookmark *'
+    run = ['layout floating']
