--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -203,3 +203,8 @@ automatically-unhide-macos-hidden-apps = true
     if.app-name-regex-substring = 'Google Chrome'
     if.window-title-regex-substring = 'Bookmark *'
     run = ['layout floating']
+
+[[on-window-detected]]
+    if.app-name-regex-substring = 'Google Chrome'
+    if.window-title-regex-substring = "Who's using Chrome?"
+    run = ['layout floating']
